<resources>
    <string name="app_name">Saiga Driver</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="enter_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="next">Next</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="phone_hint">901234567</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="permission_check">Permissions check</string>
    <string name="check">Check</string>
    <string name="account_not">Do you not have an account yet?</string>
    <string name="already_account">Do you already have an account?</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="please_enable_notification">Please turn on notifications so that you don\'t miss every incoming order. This will not compromise your security.</string>
    <string name="enable_location">Enable location</string>
    <string name="please_enable_location">Please turn on geolocation to ensure that we can communicate with you effectively. This does not pose any risk to your security.</string>
    <string name="please_enable_call">Please turn on call phone to ensure that we can communicate with you effectively. This does not pose any risk to your security.</string>
    <string name="home">Home</string>
    <string name="default_from">Оққўрғон (маҳаллий) жомеъ масжиди</string>
    <string name="default_to">Юнусабадский район, м-в юнусабад-19, ул. дехканабад, 17</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="total_balance">Total balance</string>
    <string name="transfer_money">Transfer money</string>
    <string name="customer_care">Customer care</string>
    <string name="settings">Settings</string>
    <string name="directions">Directions</string>
    <string name="finance">Finance</string>
    <string name="delete_direction">Delete direction</string>
    <string name="add_direction">Add direction</string>
    <string name="where_from">Where from</string>
    <string name="where_to">Where to</string>
    <string name="amount">Departure price</string>
    <string name="time_to_leave">Time to leave</string>
    <string name="directional_taxi">Directional taxi</string>
    <string name="favourites_address">Favourite address</string>
    <string name="trips">My trips</string>
    <string name="search_for_taxis">Search for taxis</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose_date">Choose date</string>
    <string name="error">Error</string>
    <string name="language">Language</string>
    <string name="uzbek">Uzbek</string>
    <string name="english">English</string>
    <string name="message">Message</string>
    <string name="success">Success</string>
    <string name="light_car">Light weight</string>
    <string name="medium_car">Medium weight</string>
    <string name="heavy_car">Heavy weight</string>
    <string name="order">Order</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="confirm">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="theme">Theme</string>
    <string name="log_out">Log out</string>
    <string name="filter">Filter</string>

</resources>