<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_directional_taxi"
        android:icon="@drawable/ic_direction"
        android:title="@string/directional_taxi" />

    <item
        android:id="@+id/menu_trips"
        android:icon="@drawable/ic_send"
        android:title="@string/trips" />

    <item
        android:id="@+id/menu_favourites"
        android:icon="@drawable/ic_heart"
        android:title="@string/favourites_address" />

    <item
        android:id="@+id/menu_care"
        android:icon="@drawable/ic_info"
        android:title="@string/customer_care" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>