<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:layout_height="match_parent">

    <!--  <androidx.fragment.app.FragmentContainerView
          android:id="@+id/container_map"
          android:name="uz.gita.my_taxi_jamshid.presentation.screens.main.MapHelper"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />-->


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="40dp"
       android:layout_marginEnd="@dimen/margin_large"
        app:cardCornerRadius="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="@+id/image_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_menu"
        app:layout_constraintWidth_percent="0.42">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/margin_std">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_my_location" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_std"
                android:layout_weight="1"
                android:text="@string/directional_taxi"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_spin_kit"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/primary"
        app:layout_constraintBottom_toBottomOf="@id/image_my_location"
        app:layout_constraintEnd_toEndOf="@id/image_my_location"
        app:layout_constraintStart_toStartOf="@id/image_my_location"
        app:layout_constraintTop_toTopOf="@id/image_my_location" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_my_location"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/margin_component"
        android:background="@drawable/bg_circle"
        android:clickable="true"
        android:elevation="1dp"
        android:focusable="true"
        android:src="@drawable/ic_my_location"
        android:visibility="invisible"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/container_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_centre_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_centre_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/margin_std"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.InnerTop">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_component"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#F8F8F8"
                app:cardElevation="0dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.InnerTop">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_marginVertical="@dimen/margin_large"
                    android:background="@null"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_location_red" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_where_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F8F8F8"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_std"
                        android:text="@string/where_from" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/dark_grey"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#F8F8F8"
                app:cardElevation="0dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearance_Custom_Corner_Bottom">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_marginVertical="@dimen/margin_large"
                    android:background="@null"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_location_blue" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_where_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#f8f8f8"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_std"
                        android:text="@string/where_to" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>